# homelogger

./: README.md  homelogger.service  pyproject.toml
homelogger/: main.py
