[tool.poetry]
name = "homelogger"
version = "0.1.19"
description = ""
authors = ["Jóhann Friðriksson <johann.fridriksson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.0.0"
click = "^8.0.4"
paho-mqtt = "^1.6.1"
influxdb = "^5.3.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
homelogger = "homelogger.main:main"
